--- a/RentAMovie/Views/Review/Create.cshtml
+++ b/RentAMovie/Views/Review/Create.cshtml
@@ -3,20 +3,6 @@
 @{
     var currentMovie = service.GetMovie(Model.MovieId);
     ViewData["Title"] = $"Review {currentMovie.Title}";
-
-    string backDropPath = "https://image.tmdb.org/t/p/w1920_and_h800_multi_faces";
-    string posterPath = "https://image.tmdb.org/t/p/w500";
-}
-@{
-    int? yearPublished;
-    if (currentMovie.DatePublished != null)
-    {
-        yearPublished = currentMovie.DatePublished.Value.Year;
-    }
-    else
-    {
-        yearPublished = null;
-    }
 }
 
 <div>
@@ -25,7 +11,7 @@
         {
             @if (currentMovie.TmdbId != null)
             {
-                <img id="movie-poster" src="@(posterPath + currentMovie.Poster)" />
+                <img id="movie-poster" src="@(WebConstants.PosterPathCard + currentMovie.Poster)" />
             }
             else
             {
@@ -42,7 +28,7 @@
             {
                 @if (currentMovie.TmdbId != null)
                 {
-                    <span class="backdrop" style="background-image: url(@(backDropPath + currentMovie.BackdropPath))"></span>
+                    <span class="backdrop" style="background-image: url(@(WebConstants.BackdropPath + currentMovie.BackdropPath))"></span>
                 }
                 else
                 {
@@ -70,7 +56,7 @@
                 asp-controller="Movie"
                 asp-action="MovieTmdb" 
                 asp-route-id="@currentMovie.TmdbId"
-                asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(currentMovie.Title, yearPublished)">
+                asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(currentMovie.Title, WebUtilities.GetReleaseDateYear(currentMovie.DatePublished))">
                     Back to movie
                 </a>
             }
@@ -80,7 +66,7 @@
                 asp-controller="Movie" 
                 asp-action="MovieUser" 
                 asp-route-movieId="@currentMovie.Id"
-                asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(currentMovie.Title, yearPublished)">
+                asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(currentMovie.Title, WebUtilities.GetReleaseDateYear(currentMovie.DatePublished))">
                     Back to movie
                 </a>
             }
