--- a/RentAMovie/Views/Shared/Movie/_BookmarkPoster.cshtml
+++ b/RentAMovie/Views/Shared/Movie/_BookmarkPoster.cshtml
@@ -1,15 +1,4 @@
 ﻿@inject SignInManager<User> SignInManager
-@{
-    int? publishYear;
-    if (Model?.ReleaseDate != null)
-    {
-        publishYear = Model.ReleaseDate.Year;
-    }
-    else
-    {
-        publishYear = null;
-    }
-}
 
 @if (Model.IsWatchlistedByUser == false)
 {
@@ -19,7 +8,7 @@
         asp-controller="Movie"
         asp-action="AddToWatchlist"
         asp-route-movieId="@Model.Id"
-        asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(Model.Title, publishYear)">
+        asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(Model.Title, WebUtilities.GetReleaseDateYear(Model.ReleaseDate))">
             <input type="submit" />
             <img class="bookmark" src="~/images/bookmark/bookmark.png" />
         </form>
@@ -38,7 +27,7 @@ else
     asp-controller="Movie"
     asp-action="RemoveFromWatchlist"
     asp-route-movieId="@Model.Id"
-    asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(Model.Title, publishYear)">
+    asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(Model.Title, WebUtilities.GetReleaseDateYear(Model.ReleaseDate))">
         <input type="submit" />
         <img class="bookmark" src="~/images/bookmark/bookmark-added.png" />
     </form>
