--- a/RentAMovie/Views/Shared/Movie/_MovieSingleCardMixed.cshtml
+++ b/RentAMovie/Views/Shared/Movie/_MovieSingleCardMixed.cshtml
@@ -1,42 +1,5 @@
 ﻿@using RentAMovie.Areas.Admin.Models.Movie;
 @model CardMovieModel
-@{
-    string posterPathCard = "https://image.tmdb.org/t/p/w500";
-    string ratingColor;
-
-    string rating = "0.0";
-    if (Model.Rating != null)
-    {
-        rating = Model.Rating;
-    }
-
-    if (float.Parse(rating) >= 8)
-    {
-        ratingColor = "green";
-    }
-    else if (float.Parse(rating) >= 5)
-    {
-        ratingColor = "orange";
-    }
-    else if (float.Parse(rating) < 5 && float.Parse(rating) > 0)
-    {
-        ratingColor = "red";
-    }
-    else
-    {
-        ratingColor = "black";
-    }
-
-    int? publishYear;
-    if (Model?.DatePublished != null)
-    {
-        publishYear = Model.DatePublished.Value.Year;
-    }
-    else
-    {
-        publishYear = null;
-    }
-}
 
 <div class="card">
     @if (Model.TmdbId != null)
@@ -44,10 +7,10 @@
         <a asp-controller="Movie"
         asp-action="MovieTmdb"
         asp-route-id="@Model.TmdbId"
-        asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(Model.Title, publishYear)">
+        asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(Model.Title, WebUtilities.GetReleaseDateYear(Model.DatePublished))">
             @if (Model.Poster != null)
             {
-                <img src="@(Model.TmdbId != null ? posterPathCard + Model.Poster : Model.Poster)" class="card-img-top" alt="@Model.Title poster">
+                <img src="@(Model.TmdbId != null ? WebConstants.PosterPathCard + Model.Poster : Model.Poster)" class="card-img-top" alt="@Model.Title poster">
             }
             else
             {
@@ -60,10 +23,10 @@
         <a asp-controller="Movie"
         asp-action="MovieUser"
         asp-route-movieId="@Model.Id"
-        asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(Model.Title, publishYear)">
+        asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(Model.Title, WebUtilities.GetReleaseDateYear(Model.DatePublished))">
             @if (Model.Poster != null)
             {
-                <img src="@(Model.TmdbId != null ? posterPathCard + Model.Poster : Model.Poster)" class="card-img-top" alt="@Model.Title poster">
+                <img src="@(Model.TmdbId != null ? WebConstants.PosterPathCard + Model.Poster : Model.Poster)" class="card-img-top" alt="@Model.Title poster">
             }
             else
             {
@@ -72,7 +35,7 @@
         </a>
     }
     <div class="card-body">
-        <div class="rating @ratingColor">
+        <div class="rating @WebUtilities.GetRatingColor(Model.Rating)">
             <p>
                 @(Model.Rating != null && float.Parse(Model.Rating) != 0 ? float.Parse(Model.Rating).ToString("0.0") : "NR")
             </p>
@@ -83,7 +46,7 @@
                     <a asp-controller="Movie"
                     asp-action="MovieTmdb"
                     asp-route-id="@Model.TmdbId"
-                    asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(Model.Title, publishYear)">
+                    asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(Model.Title, WebUtilities.GetReleaseDateYear(Model.DatePublished))">
                         @Model.Title
                     </a>
                 }
@@ -92,7 +55,7 @@
                     <a asp-controller="Movie"
                     asp-action="MovieUser"
                     asp-route-movieId="@Model.Id"
-                    asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(Model.Title, publishYear)">
+                    asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(Model.Title, WebUtilities.GetReleaseDateYear(Model.DatePublished))">
                         @Model.Title
                     </a>
                 }
