--- a/RentAMovie/Views/Shared/Movie/_MovieSingleCardTmdb.cshtml
+++ b/RentAMovie/Views/Shared/Movie/_MovieSingleCardTmdb.cshtml
@@ -1,51 +1,13 @@
 ﻿@model PopularMovieResultModule
-@{
-    string posterPathCard = "https://image.tmdb.org/t/p/w500";
-    string ratingColor;
-
-    string rating = "0.0";
-    if (Model.Rating != null)
-    {
-        rating = Model.Rating;
-    }
-
-    if (float.Parse(rating) >= 8)
-    {
-        ratingColor = "green";
-    }
-    else if (float.Parse(rating) >= 5)
-    {
-        ratingColor = "orange";
-    }
-    else if (float.Parse(rating) < 5 && float.Parse(rating) > 0)
-    {
-        ratingColor = "red";
-    }
-    else
-    {
-        ratingColor = "black";
-    }
-}
-@{
-    int? publishYear;
-    if (Model?.ReleaseDate != null)
-    {
-        publishYear = Model.ReleaseDate.Year;
-    }
-    else
-    {
-        publishYear = null;
-    }
-}
 
 <div class="card">
     <a asp-controller="Movie"
        asp-action="MovieTmdb"
        asp-route-id="@Model.TmdbId"
-       asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(Model.Title, publishYear)">
+       asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(Model.Title, WebUtilities.GetReleaseDateYear(Model.ReleaseDate))">
         @if (Model.PosterPath != null)
         {
-            <img src="@(Model.TmdbId != null ? posterPathCard + Model.PosterPath : Model.PosterPath)" class="card-img-top" alt="@Model.Title poster">
+            <img src="@(Model.TmdbId != null ? WebConstants.PosterPathCard + Model.PosterPath : Model.PosterPath)" class="card-img-top" alt="@Model.Title poster">
         }
         else
         {
@@ -53,7 +15,7 @@
         }
     </a>
     <div class="card-body">
-        <div class="rating @ratingColor">
+        <div class="rating @WebUtilities.GetRatingColor(Model.Rating)">
             <p>
                 @(Model.Rating != null && float.Parse(Model.Rating) != 0 ? float.Parse(Model.Rating).ToString("0.0") : "NR")
             </p>
@@ -62,7 +24,7 @@
             <a asp-controller="Movie"
                asp-action="MovieTmdb"
                asp-route-id="@Model.TmdbId"
-               asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(Model.Title, publishYear)">
+               asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(Model.Title, WebUtilities.GetReleaseDateYear(Model.ReleaseDate))">
                 @Model.Title
             </a>
         </h5>
