--- a/RentAMovie/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/RentAMovie/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -93,6 +93,10 @@
                     @foreach (var movie in userMovies)
                     {
                         <div class="movie-item">
+                            @if (movie.IsPublic == false)
+                            {
+                                <span class="unapproved"></span>
+                            }
                             <a 
                             asp-controller="Movie" 
                             asp-action="MovieUser" 
