--- a/RentAMovie/Views/Movie/UserMovies.cshtml
+++ b/RentAMovie/Views/Movie/UserMovies.cshtml
@@ -23,7 +23,38 @@
 	{
 		@foreach (var movie in Model)
 		{
-			<partial name="~/Views/Shared/Movie/_MovieSingleCardUserControls.cshtml" model="movie" />
+			if (movie.IsPublic)
+			{
+				<partial name="~/Views/Shared/Movie/_MovieSingleCardUserControls.cshtml" model="movie" />
+			}
+			else
+			{
+                <div class="card">
+                    <span class="unapproved"></span>
+                    @if (movie.PosterPath != null)
+                    {
+                        <img src="@movie.PosterPath" class="card-img-top" alt="@movie.Title poster">
+                    }
+                    else
+                    {
+                        <img src="~/images/default-poster1.png" />
+                    }
+                    <div class="card-body">
+                        <div class="rating @WebUtilities.GetRatingColor(movie.Rating)">
+                            <p>@(movie.Rating != null && float.Parse(movie.Rating) != 0 ? float.Parse(movie.Rating).ToString("0.0") : "NR")</p>
+                        </div>
+                        <h5 class="card-title">
+                            @movie.Title
+                        </h5>
+                        <h6>
+                            @(movie.ReleaseDate != null ? movie.ReleaseDate.Value.ToString("MMM dd, yyyy") : "-")
+                        </h6>
+                    </div>
+                    <div class="user-controls">
+                        <p>Unapproved</p>
+                    </div>
+                </div>
+            }
 		}
 	}
 	else
