--- a/RentAMovie/wwwroot/css/profile.css
+++ b/RentAMovie/wwwroot/css/profile.css
@@ -125,6 +125,7 @@
 }
 
 .movie-item {
+    position: relative;
     width: 150px;
     margin-right: 5px;
     background-color: #0D4C92;
@@ -246,6 +247,18 @@ main form button[type="submit"] {
 
 main form button[type="submit"]:hover {
     background-color: #0079FF;
+}
+
+.unapproved {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #0f376358;
+    z-index: 10;
+    border-radius: .25rem;
+    filter: blur(3px);
 }
 
 @media screen and (max-width: 473px) {
