--- a/RentAMovie/Areas/Admin/Views/Movie/Index.cshtml
+++ b/RentAMovie/Areas/Admin/Views/Movie/Index.cshtml
@@ -42,31 +42,62 @@
 					<img src="~/images/default-poster1.png" />
 				}
 				<div class="movie-info">
-					<h4>@movie.Title</h4>
-					<p>@(movie.DatePublished != null ? movie.DatePublished.Value.ToString("MMM dd, yyyy") : "-")</p>
-					<div class="movie-controls">
-						<div class="general-controls">
-							<a asp-area=""
-							asp-controller="Movie"
-							asp-action="MovieUser"
-							asp-route-movieId="@movie.Id"
-							asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(movie.Title, WebUtilities.GetReleaseDateYear(movie.DatePublished))">
-								<p>View</p>
+					@if (movie.TmdbId != null)
+					{
+						<h4>@movie.Title</h4>
+						<p>@(movie.DatePublished != null ? movie.DatePublished.Value.ToString("MMM dd, yyyy") : "-")</p>
+						<div class="movie-controls">
+							<div class="general-controls">
+								<a asp-area=""
+								asp-controller="Movie"
+								asp-action="MovieTmdb"
+								asp-route-id="@movie.TmdbId"
+								asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(movie.Title, WebUtilities.GetReleaseDateYear(movie.DatePublished))">
+									<p>View</p>
+								</a>
+								<a asp-area="" asp-controller="Movie" asp-action="Edit" asp-route-id="@movie.Id">
+									<p>Edit</p>
+								</a>
+								<form asp-area="" asp-controller="Movie" asp-action="Delete" asp-route-id="@movie.Id">
+									<div>
+										<input type="submit" value="Delete"
+									   onclick="return confirm('Are you sure you want to DELETE this moive: @movie.Title')" />
+									</div>
+								</form>
+							</div>
+							<a asp-area="Admin" asp-controller="Movie" asp-action="ChangeVisibility" asp-route-id="@movie.Id">
+								<p>Approve</p>
 							</a>
-							<a asp-area="" asp-controller="Movie" asp-action="Edit" asp-route-id="@movie.Id">
-								<p>Edit</p>
-							</a>
-							<form asp-area="" asp-controller="Movie" asp-action="Delete" asp-route-id="@movie.Id">
-								<div>
-									<input type="submit" value="Delete"
-								   onclick="return confirm('Are you sure you want to DELETE this moive: @movie.Title')" />
-								</div>
-							</form>
 						</div>
-						<a asp-area="Admin" asp-controller="Movie" asp-action="ChangeVisibility" asp-route-id="@movie.Id">
-							<p>Approve</p>
-						</a>
-					</div>
+					}
+					else
+					{
+						<h4>@movie.Title</h4>
+						<p>@(movie.DatePublished != null ? movie.DatePublished.Value.ToString("MMM dd, yyyy") : "-")</p>
+						<div class="movie-controls">
+							<div class="general-controls">
+								<a asp-area=""
+								asp-controller="Movie"
+								asp-action="MovieUser"
+								asp-route-movieId="@movie.Id"
+								asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(movie.Title, WebUtilities.GetReleaseDateYear(movie.DatePublished))">
+									<p>View</p>
+								</a>
+								<a asp-area="" asp-controller="Movie" asp-action="Edit" asp-route-id="@movie.Id">
+									<p>Edit</p>
+								</a>
+								<form asp-area="" asp-controller="Movie" asp-action="Delete" asp-route-id="@movie.Id">
+									<div>
+										<input type="submit" value="Delete"
+									   onclick="return confirm('Are you sure you want to DELETE this moive: @movie.Title')" />
+									</div>
+								</form>
+							</div>
+							<a asp-area="Admin" asp-controller="Movie" asp-action="ChangeVisibility" asp-route-id="@movie.Id">
+								<p>Approve</p>
+							</a>
+						</div>
+					}
 				</div>
 			</div>
 		}
